--- a/style.css
+++ b/style.css
@@ -21,7 +21,15 @@ body {
 
 .stats-container {
     display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
 }
+
+.stats-container:hover {
+    cursor: pointer;
+    box-shadow: 0 0 30px lightblue;
+}
+
 
 .stats-card {
     background-color: #a8b0bc;
@@ -36,14 +44,15 @@ body {
     font-size: 50px;
 }
 
+
 #games-container {
-    display: flex;
+    display:flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 
 .game-img {
-    width: 100%;
+    width:100%;
     border-radius: 5px;
     box-shadow: 0 0 10px #FFFFFF;
 }
@@ -62,6 +71,7 @@ body {
     box-shadow: 0 0 30px lightblue;
 }
 
+
 #button-container {
     text-align: center;
 }
@@ -73,3 +83,32 @@ button {
     margin: 1%;
     border-radius: 7px;
 }
+
+/* Bonus feature: Style for the search button */
+#search-button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+/* Hover effect for the search button */
+#search-button:hover {
+    background-color: #45a049;
+}
+
+/*search-input*/
+.search-input {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 300px;
+    margin: 20px auto;
+    display: block;
+    background-color: #f5f5f5;
+}
+
